--- a/client/src/components/header.css
+++ b/client/src/components/header.css
@@ -3,6 +3,7 @@
 	background: #6441a4;
 	display: flex;
 	box-shadow: 0px 1px 2px #111;
+	z-index: 100;
 }
 
 #page-header .logo img {
@@ -12,7 +13,22 @@
 .header-nav {
 	display: flex;
     align-items: center;
-    justify-content: center;
+    flex: 2;
+}
+
+.menu {
+	padding: 90px 40px 21px;
+	cursor: pointer;
+	color: white;
+	display: flex;
+	align-items: center;
+	border-left: 2px solid #794fc6;
+	transition: background-color 0.5s ease;
+}
+
+.menu:hover {
+	background-color: #794fc6;
+	transition: background-color 0.5s ease;
 }
 
 .header-nav a {
@@ -27,7 +43,13 @@
     color: white;
 }
 
-.header-nav a.active {
-	background-color: #3b2660;
+.header-nav a:hover {
+	background-color: #794fc6;
 	transition: background-color 0.5s ease;
+}
+
+.menu--logo img {
+	width: 56px;
+	height:56px;
+	margin-right:15px;
 }
