--- a/client/src/routes/manage-channel.css
+++ b/client/src/routes/manage-channel.css
@@ -4,10 +4,6 @@
 	color: white;
 }
 
-.manage-container h2 {
-	border-bottom: 1px solid #DDD;
-}
-
 .twitch-integration {
 	background: #333;
 	border-radius: 6px;
@@ -22,6 +18,11 @@
 	background: #6441a4;
 	border-radius: 6px 6px 0px 0px;
 	display: flex;
+}
+
+.twitch-integration--header h3 {
+	margin: 0 0 0 20px;
+	align-self: center;
 }
 
 .twitch-integration--header img {
@@ -60,4 +61,118 @@
 .channelInfo--link {
 	font-size: 18px;
 	font-style: italic;
+}
+
+.achievement {
+	background: #DDD;
+    box-shadow: 0px 2px;
+    padding: 2% 10px;
+    width: 96%;
+    position: relative;
+    height: 2em;
+    margin-bottom: 25px;
+    display: block;
+    color: black;
+}
+
+/* Tab Styles */
+.manage-tabs {
+	list-style: none;
+	display: flex;
+}
+
+.manage-tab {
+	padding: 10px 20px;
+	cursor: pointer;
+	border-radius: 5px;
+	background: rgba(121, 79, 198, 0);
+	transition: all 0.2s ease;
+}
+
+.manage-tab.react-tabs__tab--selected {
+	background: rgba(121, 79, 198, 1);
+	transition: all 0.2s ease;
+}
+
+/* Member styles */
+.channelMember {
+	display: flex;
+	align-content: center;
+	padding: 5px 10px;
+	border-top: 1px solid #794fc6;
+}
+
+.channelMember--stripe {
+	background-color: rgba(0,0,0,0.4);
+}
+
+.channelMember img {
+	width: 50px;
+}
+
+.channelMember .member-info {
+	flex: 1;
+	align-self: center;
+	margin-left: 20px;
+}
+
+.achievementsHeader {
+	display: flex;
+}
+
+.achievementsHeader img {
+	width: 20px;
+}
+
+.achievementsHeader--add {
+	flex: 1;
+	text-align: right;
+	align-self: center;
+	display: flex;
+}
+
+.achievementsHeader--plus {
+	flex: 1;
+}
+
+.achievementsHeader--add img {
+	align-self: center;
+}
+
+.achievementsHeader--add a {
+	text-decoration: none;
+	color: white;
+	align-self: center;
+}
+
+.achievement-search {
+	flex: 1;
+	align-self: center;
+	margin-left: 20px;
+}
+
+.achievement-search input {
+	width: 98%;
+}
+
+.achievement--edit {
+	width: 32px;
+    height: 32px;
+    position: absolute;
+    right: 1em;
+    top: 1em;
+}
+
+.achievement--edit img {
+	width:32px;
+}
+
+.achievement-logo {
+	position: absolute;
+	left: 0;
+	top: -1em;
+}
+
+.achievement-logo img {
+	width: 100px;
 }
