--- a/client/src/components/modal.css
+++ b/client/src/components/modal.css
@@ -1,8 +1,8 @@
 .modal-mask {
-	position: absolute;
+	position: fixed;
     width: 100%;
     height: 100%;
-    background: rgba(0,0,0,0.5);
+    background: rgba(0,0,0,0.6);
     z-index: 100;
     top: 0;
     left: 0;
@@ -18,11 +18,15 @@
 }
 
 .modal {
+    position: absolute;
 	max-width: 600px;
     background: #DDD;
     padding: 10px 20px;
     min-height: 200px;
-    margin: 40px auto;
+    box-shadow: 0px 4px 4px #111;
+    border-radius: 2px;
+    color: black;
+    min-width: 450px;
 }
 
 .modal h3 {
@@ -33,8 +37,6 @@
 .modal input {
 	width: 100%;
     height: 35px;
-    font-size: 24px;
-    padding-left: 5px;
 }
 
 .channel-search {
@@ -43,4 +45,45 @@
 
 .modal .channel-item {
 	background: white;
+}
+
+.modal--hidden {
+    display: none;
+}
+
+.formGroup {
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 20px;
+}
+
+.formGroup img {
+    align-self: center;
+    max-width: 200px;
+    max-height: 200px;
+}
+
+.formGroup label {
+    font-weight: bold;
+    font-size: 20px;
+    margin-bottom: 5px;
+}
+
+.formGroup .textInput {
+    font-size: 18px;
+    width: 98%;
+    padding-left: 2%;
+}
+
+.formGroup.checkboxGroup {
+    flex-direction: row;
+}
+
+.formGroup.checkboxGroup label {
+    white-space: nowrap
+}
+
+.formGroup.checkboxGroup input {
+    height: 20px;
+    align-self: flex-start;
 }
