--- a/client/src/components/footer.css
+++ b/client/src/components/footer.css
@@ -2,7 +2,7 @@
     height: 100px;
     background: #6441a4;
     box-shadow: 0px -1px 2px #111;
-    color: wheat;
+    color: white;
     font-size: 16px;
 }
 
