--- a/client/src/routes/landing.css
+++ b/client/src/routes/landing.css
@@ -1,11 +1,8 @@
-.login-prompt {
-	max-width: 600px;
+.landing-page {
+	width: 100%;
     margin: 0 auto;
     text-align: center;
-    background: rgba(0,0,0,0.7);
     color: white;
-    padding: 5px 10px 20px;
-    border: 1px solid #333;
 }
 
 .twitch-login-button {
@@ -16,6 +13,7 @@
     border-width: 0px;
     cursor: pointer;
     text-decoration: none;
+    height: 22px;
 }
 
 .button-container {
@@ -35,4 +33,46 @@
 
 .login-button-text {
 	margin-left: 35px;
+}
+
+.site-logo {
+    width: 150px;
+    height: 100px;
+}
+
+.landing-header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 10px 0px;
+    max-width: 1060px;
+    margin: 0 auto;
+}
+
+.landing-page h1 {
+    font-size: 58px;
+}
+
+.landing-page h2 {
+    font-size: 36px;
+}
+
+.section-wrapper {
+    background-color: rgba(0,0,0,0.5);
+    padding: 10px 20px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.section-wrapper.section-wrapper--alt {
+    background-color: rgba(50, 50, 50, 0.5);
+}
+
+.section-content {
+    max-width: 1060px;
+    margin: 0 auto;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
 }
