--- a/client/src/components/header.css
+++ b/client/src/components/header.css
@@ -17,7 +17,7 @@
 }
 
 .menu {
-	padding: 90px 40px 21px;
+	padding: 80px 40px 21px;
 	cursor: pointer;
 	color: white;
 	display: flex;
@@ -26,6 +26,7 @@
 	transition: background-color 0.5s ease;
 }
 
+.menu--active,
 .menu:hover {
 	background-color: #794fc6;
 	transition: background-color 0.5s ease;
@@ -52,4 +53,36 @@
 	width: 56px;
 	height:56px;
 	margin-right:15px;
+}
+
+/* Dropdown */
+
+.menu-dropdown--wrapper {
+	display: none;
+}
+
+.menu-dropdown--wrapper.menu-dropdown--active {
+	display: block;
+}
+
+.menu-dropdown {
+	width: 230px;
+    position: absolute;
+    height: 400px;
+    background: #DDD;
+    border: 1px solid #333;
+    box-shadow: 0px 1px 3px black;
+    right: 0px;
+    top: 131px;
+    z-index: 0;
+}
+
+.menu-mask {
+	position: absolute;
+    z-index: -10;
+    background: rgba(0,0,0,0.5);
+    width: 100%;
+    height: 100%;
+    top: 130px;
+    left: 0px;
 }
