--- a/client/src/routes/manage-channel.css
+++ b/client/src/routes/manage-channel.css
@@ -63,7 +63,7 @@
 	font-style: italic;
 }
 
-.achievement {
+/*.achievement {
 	background: #DDD;
     box-shadow: 0px 2px;
     padding: 2% 10px;
@@ -73,7 +73,7 @@
     margin-bottom: 25px;
     display: block;
     color: black;
-}
+}*/
 
 /* Tab Styles */
 .manage-tabs {
