--- a/client/src/components/header.css
+++ b/client/src/components/header.css
@@ -17,6 +17,7 @@
 }
 
 .menu {
+	width: 220px;
 	padding: 80px 40px 21px;
 	cursor: pointer;
 	color: white;
@@ -50,9 +51,13 @@
 }
 
 .menu--logo img {
-	width: 56px;
-	height:56px;
+	width: 70px;
+	height:70px;
 	margin-right:15px;
+}
+
+.menu--label {
+	font-size: 20px;
 }
 
 /* Dropdown */
@@ -66,9 +71,8 @@
 }
 
 .menu-dropdown {
-	width: 230px;
+	width: 300px;
     position: absolute;
-    height: 400px;
     background: #DDD;
     border: 1px solid #333;
     box-shadow: 0px 1px 3px black;
@@ -82,7 +86,46 @@
     z-index: -10;
     background: rgba(0,0,0,0.5);
     width: 100%;
-    height: 100%;
     top: 130px;
     left: 0px;
+}
+
+.menu-dropdown ul {
+	list-style: none;
+	width: 100%;
+	padding: 0;
+	margin: 0;
+}
+
+.menu-dropdown li a {
+    width: 90%;
+    padding: 20px 5%;
+    border-bottom: 1px solid #AAA;
+    display: block;
+    text-decoration: none;
+    color: #333;
+    font-size: 16px;
+    font-weight: 700;
+    transition: all 0.2s ease;
+}
+
+.menu-dropdown li a:hover {
+	background-color: #BBB;
+	transition: all 0.2s ease;
+}
+
+.menu-dropdown li.logout a {
+	border-bottom: none;
+	border-top: 1px solid #AAA;
+	color: red;
+	margin-top: 80px;
+	transition: all 0.2s ease;
+	background-color: inherit;
+	text-align: center;
+}
+
+.menu-dropdown li.logout a:hover {
+	color: white;
+	background-color: red;
+	transition: all 0.2s ease;
 }
