--- a/client/src/routes/manage-channel.css
+++ b/client/src/routes/manage-channel.css
@@ -177,3 +177,13 @@
 .achievement-logo img {
 	width: 100px;
 }
+
+.delete-achievement-button {
+	margin-top: 10px;
+    background: #e01515;
+    color: white;
+    border: none;
+    box-shadow: 1px 1px 2px black;
+    width: 100%;
+    height:35px;
+}
