--- a/client/src/routes/channel-page.css
+++ b/client/src/routes/channel-page.css
@@ -18,17 +18,18 @@
 }
 
 .channel-fav {
-	padding: 0 10px;
+	padding: 0 2px;
 	min-height: 115px;
-	display: flex;
+	display: block;
 	align-items: center;
-    cursor: pointer;
     transition: all 0.2s ease;
+    width: 35px;
 }
 
 .condensed .channel-fav {
 	min-height: 70px;
 	transition: all 0.2s ease;
+	width: 5px;
 }
 
 .channel-fav img {
@@ -58,8 +59,26 @@
 	transition: all 0.2s ease;
 }
 
-.channel-info {
+.channel-name {
+	display: flex;
+}
+
+.channel-name span {
+	font-size: 20px;
+	margin-right: 5px;
+}
+
+.channel-name a {
+	align-items: center;
+	display: flex;
+}
+
+.channel-achievement-progress {
+	display: flex;
+	justify-content: center;
 	flex: 1;
+	height: 30px;
+	align-items: center;
 }
 
 .achievements-container {
@@ -67,15 +86,22 @@
 	margin: 15px auto 0;
 }
 
-#progress-bar-wrapper {
-  width: 100%;
-  background-color: grey;
+.progress-bar-wrapper {
+  width: 80%;
+  background-color: #FFF;
+  height: 30px;
+  border-radius: 9px;
+  border: 1px solid #666;
 }
 
-#progress-bar {
-  width: 1%;
+.progress-percentage {
+	margin-left: 10px;
+}
+
+.progress-bar {
   height: 30px;
   background-color: green;
+  border-radius: 6px
 }
 
 .no-achievements {
@@ -84,4 +110,40 @@
     text-align: center;
     text-shadow: 1px 1px black;
     margin-top: 40px;
+}
+
+@media only screen and (max-width: 480px) {
+	#channel-header {
+	    width: 100%;
+	    height: 75px;
+	    min-height: inherit;
+	    box-shadow: 0px 2px;
+	    transition: all 0.2s ease;
+	}
+
+	.channel-fav {
+		height: 70px;
+		transition: all 0.2s ease;
+		width: 5px;
+	}
+
+	.channel-fav img {
+		width: 30px;
+		transition: all 0.2s ease;
+	}
+
+	.channel-logo img {
+		width: 70px;
+		height: 70px;
+		transition: all 0.2s ease;
+	}
+
+	.achievements-container .achievement-logo img {
+		width: 80px;
+	}
+
+	.achievements-container .achievement-title {
+		margin-top: -5px;
+		font-size: 20px;
+	}
 }
