--- a/client/src/routes/home-page.css
+++ b/client/src/routes/home-page.css
@@ -1,7 +1,7 @@
 .main-content {
 	max-width: 800px;
 	margin: 20px auto 0;
-	padding-bottom: 20px;
+	padding: 0px 15px 20px;
 }
 
 .channel-header {
@@ -47,11 +47,28 @@
 
 @media only screen and (max-width: 480px) {
 	.main-content {
-		margin: 20px;
+		margin-top: 0px;
 	}
 
 	.add-channel {
 		margin: 0 10px;
 		padding: 5px 10px;
+	}
+
+	.channel-item {
+		height: 75px;
+	}
+
+	.channel-item--logo {
+		height: 75px;
+	}
+
+	.channel-item--logo img {
+		width: 75px;
+		height: 75px;
+	}
+
+	.channel-item--name {
+		font: 18px;
 	}
 }
