--- a/client/src/routes/landing.css
+++ b/client/src/routes/landing.css
@@ -76,3 +76,13 @@
     align-items: center;
     justify-content: space-between;
 }
+
+.section-content > h2,
+.section-content > div {
+    max-width: 48%;
+}
+
+.main .section-content > h2,
+.main .section-content > div {
+    max-width: 100%;
+}
