--- a/client/src/routes/manage-channel.css
+++ b/client/src/routes/manage-channel.css
@@ -187,3 +187,33 @@
     width: 100%;
     height:35px;
 }
+
+@media only screen and (max-width: 480px) {
+	h2 {
+		margin-left: 15px;
+	}
+
+	.manage-tabs {
+		justify-content: space-around;
+	}
+
+	.react-tabs ul {
+		padding: 0;
+	}
+
+	.manage-tab {
+		padding: 10px 15px;
+	}
+
+	.twitch-integration {
+		margin: 0 8px;
+	}
+
+	.twitch-integration--header {
+		padding: 15px;
+	}
+
+	.twitch-integration h3 {
+		font-size: 1.1em;
+	}
+}
