--- a/client/src/components/modal.css
+++ b/client/src/components/modal.css
@@ -131,3 +131,8 @@
 .gallery-wrapper div {
     flex: 1;
 }
+
+.iconPreview-group {
+    /*Remove when image gallery available*/
+    justify-content: center;
+}
