--- a/client/src/components/modal.css
+++ b/client/src/components/modal.css
@@ -41,8 +41,19 @@
     text-align: center;
 }
 
+.modal h4 {
+    font-size: 18px;
+    border-bottom: 1px solid #666;
+    margin-top: 30px;
+    padding-top: 10px;
+}
+
 .modal input {
 	width: 100%;
+    height: 24px;
+}
+
+.modal select {
     height: 30px;
 }
 
@@ -79,14 +90,20 @@
     margin-right: 10px;
 }
 
-.formGroup .textInput {
-    font-size: 16px;
+.formGroup .textInput,
+.formGroup .selectInput {
+    font-size: 14px;
     width: 98%;
     padding-left: 2%;
 }
 
 .formGroup.checkboxGroup {
     flex-direction: row;
+    margin-bottom: 4px;
+}
+
+.checkboxGroup div {
+    width: 100%;
 }
 
 .formGroup.checkboxGroup label {
@@ -95,6 +112,7 @@
 
 .formGroup.checkboxGroup input {
     height: 20px;
+    width: 20px;
     align-self: flex-start;
 }
 
@@ -135,4 +153,11 @@
 .iconPreview-group {
     /*Remove when image gallery available*/
     justify-content: center;
+}
+
+.modal .helpText {
+    font-size: 14px;
+    text-align: right;
+    color: #000;
+    margin-top: -14px;
 }
