Confirm panel; fixed editing and updating achievements

--- a/client/src/components/modal.css
+++ b/client/src/components/modal.css
@@ -164,6 +164,10 @@
     flex: 1;
 }
 
+.icon-upload {
+    margin-bottom: 0;
+}
+
 .iconPreview-group {
     /*Remove when image gallery available*/
     justify-content: center;
