--- a/client/src/components/achievement.css
+++ b/client/src/components/achievement.css
@@ -39,6 +39,10 @@
     margin-bottom: 5px;
 }
 
+.achievement--edit {
+    cursor: pointer;
+}
+
 .achievement-cap {
 	position: absolute;
     right: -20px;
