more achievement work

--- a/client/src/routes/landing.css
+++ b/client/src/routes/landing.css
@@ -40,6 +40,10 @@
     height: 100px;
 }
 
+.logo {
+    width: 98%;
+}
+
 .landing-header {
     display: flex;
     justify-content: space-between;
