--- a/client/src/routes/manage-channel.css
+++ b/client/src/routes/manage-channel.css
@@ -210,6 +210,8 @@
 
 .achievement-search input {
 	width: 98%;
+	height: 25px;
+    padding-left: 2%;
 }
 
 .achievement--edit {
@@ -242,6 +244,61 @@
     box-shadow: 1px 1px 2px black;
     width: 100%;
     height:35px;
+}
+
+.customDefaultImg {
+	display: -webkit-flex;
+    display: flex;
+    -webkit-flex-direction: column;
+    flex-direction: column;
+    -webkit-justify-content: center;
+    justify-content: center;
+    -webkit-align-items: center;
+    align-items: center;
+    width: 100px;
+    cursor: pointer;
+    height: 100px;
+    text-align: center;
+}
+
+.customDefaultImg.no-default {
+	border: 2px inset #AAA;
+}
+
+.default-icon--input {
+	display: none;
+}
+
+.section-wrapper--end {
+	display: flex;
+	justify-content: center;
+	padding: 15px 10px;
+}
+
+.section-wrapper--end input {
+	width: 140px;
+    height: 40px;
+    font-size: 16px;
+}
+
+.imageGallery {
+	display: flex;
+    width: 100%;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+.image--wrapper {
+	background: #DDD;
+    border-radius: 8px;
+    margin: 5px;
+    border: 1px solid black;
+    box-shadow: 1px 1px 3px black;
+}
+
+.image--wrapper img {
+	width: 125px;
+	height: 125px;
 }
 
 @media only screen and (max-width: 480px) {
