--- a/client/src/components/achievement.css
+++ b/client/src/components/achievement.css
@@ -18,6 +18,8 @@
     display: block;
     color: white;
     text-shadow: 1px 1px black;
+    display: flex;
+    align-items: center;
 }
 
 .achievement.achievement--earned {
@@ -26,20 +28,47 @@
     text-shadow: none;
 }
 
+.achievement-logo {
+    position: absolute;
+    left: -1px;
+    top: auto;
+}
+
+.achievement-logo img {
+    width: 90px;
+    height: 90px;
+}
+
 .achievement-info {
 	display: flex;
     flex-direction: column;
     align-items: center;
+    flex: 1;
+    justify-content: center;
 }
 
 .achievement-title {
 	font-size: 25px;
-    margin-top: -10px;
     margin-bottom: 5px;
+    margin-top: 0px;
 }
 
 .achievement--edit {
     cursor: pointer;
+}
+
+.achievement--gift {
+    width: 32px;
+    height: 32px;
+    position: absolute;
+    right: 3.5em;
+    top: 1em;
+    cursor: not-allowed;
+    opacity: 0.7;
+}
+
+.achievement--gift img {
+    width:32px;
 }
 
 .achievement-cap {
