--- a/client/src/components/header.css
+++ b/client/src/components/header.css
@@ -10,6 +10,7 @@
 #page-header .logo img {
 	width: 342px;
 	transition: all 0.2s ease;
+	padding: 24px 0 24px 20px;
 }
 
 .header-nav {
@@ -26,13 +27,13 @@
 	display: flex;
 	align-items: center;
 	border-left: 2px solid #794fc6;
-	transition: all 0.2s background-color 0.5s ease;
+	transition: all 0.2s ease;
 }
 
 .menu--active,
 .menu:hover {
 	background-color: #794fc6;
-	transition: background-color 0.5s ease;
+	transition: all 0.2s ease;
 }
 
 .header-nav a {
@@ -140,8 +141,9 @@
 	}
 
 	#page-header .logo img {
-		width: 80px;
+		width: 212px;
 		transition: all 0.2s ease;
+    	padding: 14px 0 14px 10px;
 	}
 
 	.header-nav {
