fixed percentage, added progress label

--- a/client/src/components/patreon-panel.css
+++ b/client/src/components/patreon-panel.css
@@ -50,7 +50,12 @@
     justify-content: center;
 }
 
-.patreon--content > div {
+.column-layout {
+    flex-direction: column;
+}
+
+.patreon--content .support,
+.patreon--content .upgrate {
 	text-align: center;
     background: white;
     padding: 10px;
