--- a/client/src/routes/manage-channel.css
+++ b/client/src/routes/manage-channel.css
@@ -313,6 +313,15 @@
 	height: 125px;
 }
 
+.manage-container h4 {
+	margin-bottom: 0px;
+	font-size: 18px;
+}
+
+.manage-container .subText {
+	font-style: italic;
+}
+
 @media only screen and (max-width: 480px) {
 	h2 {
 		margin-left: 15px;
