Hooked up active images, and image replacement w/o reupload

--- a/client/src/components/modal.css
+++ b/client/src/components/modal.css
@@ -228,6 +228,8 @@
 }
 
 .chooseImage--wrapper .chooseImage {
+    display: flex;
+    flex-direction: column;
     align-items: center;
     text-align: center;
 }
