--- a/client/src/components/modal.css
+++ b/client/src/components/modal.css
@@ -177,13 +177,27 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 70px;
+    height: 80px;
+    width: 80px;
     padding: 0;
+    border: 1px solid #999;
+    border-radius: 8px;
+    margin-bottom: 5px;
+    cursor: pointer;
+}
+
+.gallery-wrapper.image--selected {
+    border-color: #6441a4;
+    background-color: #b691fa80;
 }
 
 .gallery-wrapper img {
-    width: 70px;
-    height: 70px;
+    width: 65px;
+    height: 65px;
+}
+
+.upload--subtext {
+    font-style: italic;
 }
 
 .gallery-wrapper div {
@@ -216,6 +230,8 @@
     display: flex;
     flex-direction: column;
     text-align: center;
+    width: 40%;
+    align-items: center;
 }
 
 .currentImage h4 {
