Handshake complete; Loading splash available

--- a/client/src/components/header.css
+++ b/client/src/components/header.css
@@ -138,6 +138,8 @@
     text-align: center;
     border-bottom: 1px solid #AAA;
     font-weight: bold;
+    color: #FFFFFF;
+    background: #4a3f61;
 }
 
 
