--- a/client/src/components/header.css
+++ b/client/src/components/header.css
@@ -61,6 +61,10 @@
 
 .menu--label {
 	font-size: 20px;
+    text-overflow: ellipsis;
+    min-width: 0;
+    overflow: hidden;
+    white-space: nowrap;
 }
 
 /* Dropdown */
