--- a/client/src/routes/channel-page.css
+++ b/client/src/routes/channel-page.css
@@ -4,6 +4,8 @@
     display: flex;
     align-items: center;
 	transition: all 0.2s ease;
+	position: relative;
+	z-index: 10;
 }
 
 #channel-header.condensed {
@@ -11,8 +13,8 @@
     z-index: 100;
     width: 100%;
     top: 0;
-    min-height: 70px;
-    height: 70px;
+    min-height: 60px;
+    height: 60px;
     box-shadow: 0px 2px;
     transition: all 0.2s ease;
 }
@@ -59,8 +61,8 @@
 }
 
 .condensed .channel-logo img {
-	width: 70px;
-	height: 70px;
+	width: 55px;
+	height: 55px;
 	transition: all 0.2s ease;
 }
 
@@ -78,19 +80,25 @@
 	display: flex;
 }
 
+.channel-name img {
+	background: white;
+}
+
 .channel-achievement-progress {
 	display: flex;
 	flex-direction: column;
 	justify-content: flex-end;
 	margin-right: 10px;
 	flex: 1;
-	height: 30px;
 	align-items: center;
 
 }
 
 .progress-bar--label {
-
+    width: 100%;
+    text-align: center;
+    font-size: 20px;
+    color: #000;
 }
 
 .progress-bar--visual {
@@ -98,7 +106,7 @@
 	justify-content: flex-end;
 	margin-right: 10px;
 	flex: 1;
-	height: 30px;
+	height: 20px;
 	align-items: center;
 	width: 100%;
 }
@@ -109,15 +117,16 @@
 }
 
 .progress-bar-wrapper {
-  width: 75%;
+  width: 85%;
   background-color: #FFF;
-  height: 30px;
+  height: 20px;
   border-radius: 9px;
   border: 1px solid #666;
+  margin: 0px 40px;
 }
 
 .progress-percentage {
-	margin-left: 10px;
+	position: absolute;
 }
 
 .progress-bar {
@@ -134,10 +143,46 @@
     margin-top: 40px;
 }
 
+.channel-progress {
+	flex: 1;
+}
+
+.channel-page--sm .channel-progress {
+	position: absolute;
+    width: 100%;
+    height: 60px;
+    top: 0px;
+    background: #DDD;
+    z-index: 1;
+    display: flex;
+    flex-direction: column;
+    border-bottom: 1px solid;
+    padding-bottom: 5px;
+}
+
+.channel-page--sm .progress-bar--label {
+	margin-top: 5px;
+}
+
+.channel-page--sm .progress-bar-wrapper,
+.channel-page--sm .progress-bar {
+	height: 20px;
+}
+
+.channel-page--sm .channel-progress.channel-progress--visible {
+	top: 60px;
+	transition: all 0.2s ease;
+}
+
+.channel-page--sm .condensed + .channel-progress.channel-progress--visible {
+	top: 120px;
+	transition: all 0.2s ease;
+}
+
 @media only screen and (max-width: 480px) {
 	#channel-header {
 	    width: 100%;
-	    height: 75px;
+	    height: 60px;
 	    min-height: inherit;
 	    box-shadow: 0px 2px;
 	    transition: all 0.2s ease;
@@ -155,8 +200,8 @@
 	}
 
 	.channel-logo img {
-		width: 70px;
-		height: 70px;
+		width: 55px;
+		height: 55px;
 		transition: all 0.2s ease;
 	}
 
