--- a/client/src/components/gift-achievement.css
+++ b/client/src/components/gift-achievement.css
@@ -1,9 +1,51 @@
+.chooseMember--wrapper h5 {
+	text-align: center;
+	font-size: 18px;
+}
+
 .member-list {
 	max-height: 300px;
 	overflow-y: scroll;
 	margin: 15px 0;
+	background: white;
+	border: 1px solid white;
 }
 
-.member--selected {
-	background: white;
+.member-list .channelMember {
+	display: -webkit-flex;
+    display: flex;
+    width: 100%;
+    border: none;
+    background: #DDD;
+    -webkit-transition: all 0.2s ease;
+    transition: all 0.2s ease;
+    margin-bottom: 1px;
+    font-size: 15px;
+}
+
+.member-list .channelMember .member-info {
+	flex: 0;
+}
+
+.member-list .channelMember--stripe {
+	background: #EEE;
+    -webkit-transition: all 0.2s ease;
+    transition: all 0.2s ease;
+}
+
+.member-list .channelMember.channelMember--selected {
+	background: #594878;
+    color: white;
+    -webkit-transition: all 0.2s ease;
+    transition: all 0.2s ease;
+}
+
+.chooseMember--award {
+	padding: 10px;
+	margin-top: 10px;
+	background-color: #6441a4;
+	border: none;
+	color: white;
+	font-size: 17px;
+	cursor: pointer;
 }
