Manual Awards; Achievement date earned; hidden

--- a/client/src/components/modal.css
+++ b/client/src/components/modal.css
@@ -270,7 +270,7 @@
 
 .chooseImage--confirm {
     margin-top: 30px;
-    background-color: #007900;
+    background-color: #6441a4;
     border:none;
     color: white;
 }
