--- a/client/src/components/achievement.css
+++ b/client/src/components/achievement.css
@@ -57,13 +57,17 @@
     cursor: pointer;
 }
 
+.achievement--earnDate {
+    position: absolute;
+    right: 10px;
+}
+
 .achievement--gift {
     width: 32px;
     height: 32px;
     position: absolute;
     right: 3.5em;
     top: 1em;
-    cursor: not-allowed;
     opacity: 0.7;
 }
 
