--- a/client/src/components/gift-achievement.css
+++ b/client/src/components/gift-achievement.css
@@ -21,6 +21,7 @@
     transition: all 0.2s ease;
     margin-bottom: 1px;
     font-size: 15px;
+    cursor: pointer;
 }
 
 .member-list .channelMember .member-info {
@@ -40,12 +41,17 @@
     transition: all 0.2s ease;
 }
 
-.chooseMember--award {
+.chooseMember--award,
+.chooseMember--cancel {
 	padding: 10px;
 	margin-top: 10px;
-	background-color: #6441a4;
+	background-color: #888;
 	border: none;
 	color: white;
 	font-size: 17px;
 	cursor: pointer;
+}
+
+.chooseMember--award {
+	background-color: #6441a4;
 }
