--- a/client/src/components/notice.css
+++ b/client/src/components/notice.css
@@ -2,7 +2,7 @@
 	position: fixed;
     z-index: 2000;
     max-width: 800px;
-    padding: 25px 40px;
+    padding: 0px;
     background: #DDD;
     color: black;
     border-radius: 10px;
@@ -16,5 +16,6 @@
 
 .notice--visible {
 	opacity: 1;
-	transition: all 0.2s ease;
+    padding: 25px 40px;
+	transition: opacity 0.2s ease;
 }
