More landing page verbage and layout; start of support page

--- a/client/src/components/footer.css
+++ b/client/src/components/footer.css
@@ -9,6 +9,7 @@
 
 .footer-content {
 	max-width: 800px;
-    margin: 25px auto 0;
+    padding-top: 25px;
+    margin: 0 auto;
     text-align: center;
 }
