--- a/client/src/components/confirm-panel.css
+++ b/client/src/components/confirm-panel.css
@@ -1,4 +1,4 @@
-.confirm-panel p {
+.confirm-panel .modal-content div {
 	margin: 0 0 20px;
 	text-align: center;
 	font-size: 18px;
@@ -17,4 +17,5 @@
 .confirm-panel .confirm-delete-button {
 	background: red;
     color: white;
+    border: none;
 }
