--- a/client/src/components/footer.css
+++ b/client/src/components/footer.css
@@ -1,6 +1,7 @@
 .footer {
     height: 100px;
-    background: #6441a4;
+    /*background: #1c2741;*/
+    background: #2f4882;
     box-shadow: 0px -1px 2px #111;
     color: white;
     font-size: 16px;
