--- a/client/src/components/gift-achievement.css
+++ b/client/src/components/gift-achievement.css
@@ -35,7 +35,7 @@
 }
 
 .member-list .channelMember.channelMember--selected {
-	background: #594878;
+	background: #5a70a7;
     color: white;
     -webkit-transition: all 0.2s ease;
     transition: all 0.2s ease;
@@ -53,5 +53,5 @@
 }
 
 .chooseMember--award {
-	background-color: #6441a4;
+	background-color: #2f4882;
 }
