--- a/client/src/components/header.css
+++ b/client/src/components/header.css
@@ -1,6 +1,6 @@
 #page-header {
 	height: 130px;
-	background: #6441a4;
+	background: #2f4882;
 	display: flex;
 	box-shadow: 0px 1px 2px #111;
 	z-index: 100;
@@ -26,18 +26,18 @@
 	color: white;
 	display: flex;
 	align-items: center;
-	border-left: 2px solid #794fc6;
+	border-left: 2px solid #455c96;
 	transition: all 0.2s ease;
 }
 
 .menu--active,
 .menu:hover {
-	background-color: #794fc6;
+	background-color: #455c96;
 	transition: all 0.2s ease;
 }
 
 .header-nav a {
-	background-color: #6441a4;
+	background-color: #1c2741;
     align-items: center;
     justify-content: center;
     padding: 90px 40px 21px;
@@ -49,7 +49,7 @@
 }
 
 .header-nav a:hover {
-	background-color: #794fc6;
+	background-color: #455c96;
 	transition: background-color 0.5s ease;
 }
 
