--- a/client/src/components/modal.css
+++ b/client/src/components/modal.css
@@ -187,7 +187,7 @@
 }
 
 .gallery-wrapper.image--selected {
-    border-color: #6441a4;
+    border-color: #455c96;
     background-color: #b691fa80;
 }
 
@@ -270,7 +270,7 @@
 
 .chooseImage--confirm {
     margin-top: 30px;
-    background-color: #6441a4;
+    background-color: #455c96;
     border:none;
     color: white;
 }
