--- a/client/src/routes/landing.css
+++ b/client/src/routes/landing.css
@@ -70,8 +70,13 @@
     justify-content: center;
 }
 
+.section-wrapper.main {
+
+    background: #1c2741;
+    box-shadow: 0px -1px 5px #000
+}
+
 .section-wrapper.section-wrapper--full {
-    background: #525252;
     text-shadow: 2px 2px 3px #000;
     text-align: center;
 }
@@ -92,13 +97,8 @@
     display: block;
 }
 
-.section-wrapper--full h2 {
-    color: #ddefef;
-}
-
 .section-wrapper--full p {
     font-size: 18px;
-    color: #ddefef;
     text-shadow: 1px 1px #000;
     font-weight: bold;
 }
