--- a/client/src/routes/manage-channel.css
+++ b/client/src/routes/manage-channel.css
@@ -280,9 +280,22 @@
 }
 
 .section-wrapper--end input {
-	width: 140px;
+	width: 200px;
     height: 40px;
-    font-size: 16px;
+    font-size: 17px;
+    transition: all .2s ease;
+}
+
+.section-wrapper--end .save-button--active {
+	background: #007d00;
+    border: none;
+    color: white;
+    font-weight: bold;
+    font-size: 17px;
+    width: 200px;
+    box-shadow: -1px -1px 1px black;
+    text-shadow: 1px 1px 3px black;
+    transition: all .2s ease;
 }
 
 .imageGallery {
@@ -375,6 +388,7 @@
     cursor: pointer;
     height: 98px;
     width: 98px;
+	transition: all 0.2s ease;
 }
 
 .defaultIcon--placeholder,
@@ -394,17 +408,18 @@
 	margin: 1px 5%;
 }
 
-.default-icon--stock {
+.icon--stock {
 	margin: 1px;
 	width: 100px;
 	height: 100px;
 	cursor: pointer;
 }
 
-.default-icon--selected {
+.icon--selected {
 	background-color: #425583;
     border: 1px solid white;
     margin: 0;
+	transition: background 0.2s ease;
 }
 
 @media only screen and (max-width: 480px) {
