default/hidden icon choice complete tooltips on achievement creation start of patreon sync few gold status panels updated to hide when not gold status

--- a/client/src/components/achievement.css
+++ b/client/src/components/achievement.css
@@ -28,10 +28,15 @@
     text-shadow: none;
 }
 
+.achievement.achievement--earned .achievement-logo {
+    opacity: 1;
+}
+
 .achievement-logo {
     position: absolute;
     left: -1px;
     top: auto;
+    opacity: 0.5;
 }
 
 .achievement-logo img {
@@ -68,7 +73,7 @@
     position: absolute;
     right: 3.5em;
     top: 1em;
-    opacity: 0.7;
+    cursor: pointer;
 }
 
 .achievement--gift img {
