--- a/client/src/app.css
+++ b/client/src/app.css
@@ -68,6 +68,16 @@ body {
 	width: 55px;
 }
 
+.help {
+	margin-left: 5px;
+    width: 16px;
+    height: 16px;
+    background: url(https://res.cloudinary.com/phirehero/image/upload/v1559843373/help.png) no-repeat;
+    cursor: help;
+    display: inline-block;
+    background-size: 16px 16px;
+}
+
 @media only screen and (max-width: 480px) {
     #header {
 		font-family: Destroy;
