--- a/client/src/routes/manage-channel.css
+++ b/client/src/routes/manage-channel.css
@@ -44,15 +44,6 @@
 	background: rgba(200,200,200,0.5);
 }*/
 
-.integration {
-	border-radius: 6px;
-    box-shadow: 1px 1px 2px black;
-    margin-bottom: 20px;
-}
-
-.integration--twitch {
-	background: #333;
-}
 
 .integration--patreon {
 	background: #DDD;
@@ -420,6 +411,11 @@
     border: 1px solid white;
     margin: 0;
 	transition: background 0.2s ease;
+}
+
+.manage-container .disabled {
+	display: none;
+	pointer-events: none;
 }
 
 @media only screen and (max-width: 480px) {
