--- a/client/src/routes/profile-page.css
+++ b/client/src/routes/profile-page.css
@@ -8,6 +8,7 @@
 	border-radius: 6px;
     box-shadow: 1px 1px 2px black;
     margin-bottom: 20px;
+    color: black;
 }
 
 .integration.not-linked {
@@ -18,7 +19,7 @@
 }
 
 .integration--twitch {
-	background: #333;
+	background: #DDD;
 }
 
 .integration--patreon {
@@ -33,6 +34,7 @@
 .integration-header {
 	border-radius: 6px 6px 0px 0px;
 	display: flex;
+	color: white;
 }
 
 .integration--twitch .integration-header {
