--- a/src/components/footer.css
+++ b/src/components/footer.css
@@ -6,6 +6,7 @@
     color: white;
     font-size: 16px;
     margin-top: 15px;
+    transition: all 0.2s ease;
 }
 
 .footer-content {
@@ -13,4 +14,12 @@
     padding-top: 25px;
     margin: 0 auto;
     text-align: center;
+}
+
+@media only screen and (max-width: 480px) {
+    .footer {
+        height: 80px;
+        font-size: 14px;
+        transition: all 0.2s ease;
+    }
 }
