experience updates; SSL

--- a/src/components/achievement.css
+++ b/src/components/achievement.css
@@ -22,6 +22,10 @@
     align-items: center;
 }
 
+.achievement.achievement--disabled {
+    opacity: 0.5;
+}
+
 .achievement.achievement--earned {
     background: #DDD;
     color: black;
