--- a/src/routes/channel-page.css
+++ b/src/routes/channel-page.css
@@ -91,6 +91,18 @@
     height: 24px;
 }
 
+.join-channel {
+	margin-right: 15px;
+    padding: 10px 20px;
+    border: 1px solid #666;
+    text-decoration: none;
+    font-weight: bold;
+    border-radius: 6px;
+    background: #2f4882;
+    color: white;
+    box-shadow: 0px 1px 2px black;
+}
+
 .channel-achievement-progress {
 	display: flex;
 	flex-direction: column;
