--- a/src/app.css
+++ b/src/app.css
@@ -71,6 +71,14 @@ body {
     background-size: 16px 16px;
 }
 
+.gold {
+	color: #ecdc19;
+}
+
+.strong {
+	font-weight: bold;
+}
+
 @media only screen and (max-width: 480px) {
 	
 	#achievements-header {
