--- a/src/components/patreon-panel.css
+++ b/src/components/patreon-panel.css
@@ -71,6 +71,15 @@
     margin: 0 10px;
 }
 
+.patreon--content .upgrade {
+    background: none;
+    border-top: 1px solid;
+    border-radius: 0px;
+    box-shadow: none;
+    padding-top: 15px;
+    margin-top: 20px;
+}
+
 .patreon--content button {
 	background: rgb(232, 91, 70);
     border: none;
