--- a/src/routes/channel-page.css
+++ b/src/routes/channel-page.css
@@ -19,6 +19,11 @@
     transition: all 0.2s ease;
 }
 
+.channel-header--stub {
+	display: block;
+	height: 100px;
+}
+
 .channel-fav {
 	padding: 0 2px;
 	min-height: 115px;
@@ -205,6 +210,10 @@
 	    min-height: inherit;
 	    box-shadow: 0px 2px;
 	    transition: all 0.2s ease;
+	}
+
+	.channel-header--stub {
+		height: 60px;
 	}
 
 	.channel-fav {
