--- a/src/routes/profile-page.css
+++ b/src/routes/profile-page.css
@@ -55,9 +55,14 @@
 	height: 28px;
 }
 
+.integration-settings {
+	flex: 1;
+    text-align: right;
+    margin-right: 10px;
+}
+
 .integration-sync {
 	width: 30px;
-	flex: 1;
 	display: flex;
     justify-content: flex-end;
     align-items: center;
