--- a/src/components/achievement.css
+++ b/src/components/achievement.css
@@ -62,6 +62,21 @@
     margin-top: 0px;
 }
 
+.achievement--icons {
+    position: absolute;
+    top: 1em;
+    right: 1em;
+    display: flex;
+    align-items: flex-end;
+    flex: 1;
+}
+
+.achievement--icons div {
+    margin-left: 3px;
+    width: 32px;
+    height: 32px;
+}
+
 .achievement--edit {
     cursor: pointer;
 }
@@ -72,14 +87,10 @@
 }
 
 .achievement--gift {
-    width: 32px;
-    height: 32px;
-    position: absolute;
-    right: 3.5em;
-    top: 1em;
     cursor: pointer;
 }
 
+.achievement--limited img,
 .achievement--gift img {
     width:32px;
 }
