--- a/src/components/patreon-panel.css
+++ b/src/components/patreon-panel.css
@@ -71,7 +71,7 @@
     margin: 0 10px;
 }
 
-.patreon--content .upgrade {
+.patreon--content.patreon--active .upgrade {
     background: none;
     border-top: 1px solid;
     border-radius: 0px;
