--- a/src/routes/channel-directory-page.css
+++ b/src/routes/channel-directory-page.css
@@ -58,3 +58,9 @@
 	top: 20px;
 	background: #555;
 }
+
+@media only screen and (max-width: 480px) {
+	.channel-directory {
+		margin-top: 20px;
+	}
+}
