--- a/src/routes/landing.css
+++ b/src/routes/landing.css
@@ -107,6 +107,10 @@
     max-width: 48%;
 }
 
+.section-content .yt-container {
+    max-width: 100%
+}
+
 .section-content > h2 {
     flex: 1;
 }
@@ -180,4 +184,43 @@
 .cookie-consent .accept:hover {
     background-color: #37425d;
     transition: all 0.2s ease;
+}
+
+.yt-container {
+    position: relative;
+    padding-bottom: 56.25%;
+    padding-top: 30px; height: 0; overflow: hidden;
+}
+
+.yt-container iframe,
+.yt-container object,
+.yt-container embed {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
+
+@media only screen and (max-width: 480px) {
+    .logo {
+        width: 90%;
+    }
+
+    .landing-page h2 {
+        margin-left: 0;
+    }
+    .landing-page .section-gfx img {
+        max-width: inherit;
+        width: 100%;
+    }
+
+    .section-content {
+        flex-direction: column;
+    }
+
+    .section-content > h2,
+    .section-content > div {
+        max-width: 98%;
+    }
 }
